<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/bg_coffee_shop" />
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="34sp"
                android:textStyle="bold"
                android:padding="20dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="140dp"
                android:textColor="@color/white"
                android:text="Coffee Shop Digital" />

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/nama_pemesan" />
        <TextView
            android:id="@+id/tv_nama"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"

            android:textSize="18sp"
            android:text="@string/nama" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/email_pemesan" />
        <TextView
            android:id="@+id/tv_email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"

            android:textSize="18sp"
            android:text="@string/email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/no_handphone_pemesan" />
        <TextView
            android:id="@+id/tv_nohp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"

            android:textSize="18sp"
            android:text="@string/nomor_handphone" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/tanggal_pemesanan" />
        <TextView
            android:id="@+id/tv_tglpemesanan"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"

            android:textSize="18sp"
            android:text="@string/tanggal_pemesanan" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/pesan_minuman" />
        <TextView
            android:id="@+id/tv_minuman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:text="@string/daftar_minuman" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/pesan_makanan" />

        <TextView
            android:id="@+id/tv_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:text="@string/daftar_makanan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/pembayaran" />

        <TextView
            android:id="@+id/tv_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:text="@string/pembayaran" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"

            android:text="@string/sub_total" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:text="@string/total_pembayaran" />
    </LinearLayout>
</ScrollView>